--- a/public/index.html
+++ b/public/index.html
@@ -1156,6 +1156,7 @@
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/alerts.js"></script>
     <script src="assets/js/table-buttons.js"></script>
+    <script src="assets/js/docs-buttons.js"></script>
     <script style="">
       $("#svedenia").addClass("d-none");
       $("#struktura").addClass("d-none");
