--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
                 <a class="btn btn-primary btn-block btn-lg text-center mb-2" href="#struktura" id="struk-btn">
                   <i class="fa fa-fw fa-plus"></i>Структура и органы управления образовательной организацией</a>
                 <div class="card mb-3" id="struktura">
-                  <div class="card-header">Добавление страницы</div>
+                  <div class="card-header"><span class="d-inline-block" style="padding-top: 4px;">Редактирование страницы</span><button type="submit" class="float-right btn btn-sm btn-warning" id="saveStructure_btn">Скачать</button></div>
                   <div class="card-body">
                     <form id="structure-form" class="AVAST_PAM_nonloginform">
                       <!--<input name="base[draft]" type="hidden" id="draft" value="">-->
